WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286956
[WebGPU] MTLCounterTimestamps are not always retained for the lifetime of the MTLCommandBuffer
https://bugs.webkit.org/show_bug.cgi?id=286956
Summary
[WebGPU] MTLCounterTimestamps are not always retained for the lifetime of the...
Mike Wyrzykowski
Reported
2025-02-03 13:42:27 PST
[WebGPU] MTLCounterTimestamps are not always retained for the lifetime of the MTLCommandBuffer
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-02-03 13:42:43 PST
rdar://144077005
Mike Wyrzykowski
Comment 2
2025-02-03 14:06:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39933
EWS
Comment 3
2025-02-05 19:03:05 PST
Committed
289905@main
(e0a82ddfa60a): <
https://commits.webkit.org/289905@main
> Reviewed commits have been landed. Closing PR #39933 and removing active labels.
EWS
Comment 4
2025-02-07 13:27:36 PST
Committed
289651.60@safari-7621-branch
(fc5632f03729): <
https://commits.webkit.org/289651.60@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2534 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug